--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
     <div>
       <h1>Discover hidden places in the world around you</h1>
        <a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">
-       <p>Download Excusion (Coming Soon)</p></a>
+       <p id= "link">Download Excursion (Coming Soon!)</p></a>
+       <video autoplay muted loop>
+         <source src="/Users/timothyflynn/Desktop/2019/Projects/excursion/resources/video/excursion.mp4" type="video/mp4">
+       </video>
     </div>
     <div>
       <h2>Your personal travel guide</h2>
       <p>Excursion remembers places you like, and recommends new points
       of interest around you.</p>
+      <img src="/Users/timothyflynn/Desktop/2019/Projects/excursion/resources/images/camp.jpg" alt="">
     </div>
     <div>
-
+      <br>
+      <img src="/Users/timothyflynn/Desktop/2019/Projects/excursion/resources/images/phone.png" alt="">
       <h2>Coming Soon for iPhone and Android</h2>
-      <p>Download Excusion(Coming Soon)</p>
+      <a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">
+      <p id= "link">Download Excursion (Coming Soon!)</p></a>
+      <p id="end">© Excursion</p>
     </div>
 
   </body>
