--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
        <a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">
        <p id= "link">Download Excursion (Coming Soon!)</p></a>
        <video autoplay muted loop>
-         <source src="/Users/timothyflynn/Desktop/2019/Projects/excursion/resources/video/excursion.mp4" type="video/mp4">
+         <source src="./resources/video/excursion.mp4" type="video/mp4">
        </video>
     </div>
     <div>
       <h2>Your personal travel guide</h2>
       <p>Excursion remembers places you like, and recommends new points
       of interest around you.</p>
-      <img src="/Users/timothyflynn/Desktop/2019/Projects/excursion/resources/images/camp.jpg" alt="">
+      <img src="./resources/images/camp.jpg" alt="">
     </div>
     <div>
       <br>
-      <img src="/Users/timothyflynn/Desktop/2019/Projects/excursion/resources/images/phone.png" alt="">
+      <img src="./resources/images/phone.png" alt="">
       <h2>Coming Soon for iPhone and Android</h2>
       <a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">
       <p id= "link">Download Excursion (Coming Soon!)</p></a>
